Added suppress_outputs to metadata

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -1,5 +1,8 @@
 {
  "metadata": {
+  "git": {
+   "suppress_outputs": true
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -17,7 +20,8 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
   },
-  "name": ""
+  "name": "",
+  "signature": "sha256:904d2e04a54ffdcc75873f4db175056f7781af23796d8fedeea4852feb5a8aca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,8 +36,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -108,8 +111,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -125,8 +127,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -159,8 +160,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -180,8 +180,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -219,8 +218,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -244,8 +242,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -266,8 +263,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -310,8 +306,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -351,8 +346,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -385,8 +379,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -415,8 +408,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -433,8 +425,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -467,8 +458,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -488,8 +478,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -509,8 +498,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -556,8 +544,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -599,8 +586,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -650,8 +636,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -673,8 +658,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -682,8 +666,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     }
    ],
    "metadata": {}
