Added plot of model curve, from Schwille review paper

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -21,7 +21,7 @@
    "version": "3.6.1"
   },
   "name": "",
-  "signature": "sha256:904d2e04a54ffdcc75873f4db175056f7781af23796d8fedeea4852feb5a8aca"
+  "signature": "sha256:bff76964eeb70a5ec9c34928bf118be15ff7d5fe82ece4b4d59048b096e6e558"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -105,9 +105,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "trajectory_file = \"40nm/run_nojump.xtc\"\n",
-      "trr_file = \"20nm/run.trr\"\n",
-      "topology_file = \"40nm/system_nojump.gro\""
+      "trajectory_file = \"40nm/run.xtc\"\n",
+      "trr_file = \"40nm/run.trr\"\n",
+      "topology_file = \"40nm/system.gro\""
      ],
      "language": "python",
      "metadata": {},
@@ -211,10 +211,10 @@
       "SAMPLING_RATIO = .1\n",
       "\n",
       "# How many sigmas out from the beam center to truncate the beam's Gaussian profile at\n",
-      "CUTOFF = 1\n",
+      "CUTOFF = 3\n",
       "\n",
       "# How many lipids to bin into a single trajectory\n",
-      "BIN_SIZE = 200"
+      "BIN_SIZE = 100"
      ],
      "language": "python",
      "metadata": {},
@@ -403,8 +403,8 @@
      "collapsed": false,
      "input": [
       "%%time\n",
-      "t = md.load(trajectory_file, top=topology_file)\n",
-      "#t = md.load_trr(trr_file, top=topology_file)"
+      "#t = md.load(trajectory_file, top=topology_file)\n",
+      "t = md.load_trr(trr_file, top=topology_file)"
      ],
      "language": "python",
      "metadata": {},
@@ -569,14 +569,14 @@
       "# Plot the intensities of detections associated with each lipid\n",
       "plt.subplot(221)\n",
       "for _data in binned_avgs:\n",
-      "    plt.plot(np.arange(0, len(binned_avgs[0]), 1), _data, marker='o', markersize=.5 ) \n",
+      "    plt.plot(np.arange(0, len(t), 1), _data, marker='o', markersize=.5 ) \n",
       "plt.xlabel(\"Time (ns)\")\n",
       "plt.ylabel(\"Intensity\")\n",
       "plt.title(\"Intensity Trace\")\n",
       "\n",
       "# Plot sum of intensities (i.e. what a detector would see)\n",
       "plt.subplot(222)\n",
-      "plt.plot(np.arange(0, len(binned_tots), 1), binned_tots, marker='None', markersize=.5 ) \n",
+      "plt.plot(np.arange(0, len(t), 1), binned_tots, marker='None', markersize=.5 ) \n",
       "# summed_data = np.sum(intensities, axis=0)\n",
       "# #plt.plot(np.arange(0,len(summed_data), 1), summed_data, marker = 'o', markersize=.1, )\n",
       "# plt.plot(np.arange(0,len(binned), 1), [x[1] for x in binned], marker = 'o', markersize=.1, )\n",
@@ -601,8 +601,9 @@
      "collapsed": false,
      "input": [
       "# Don't set the max lag to greater than the number of datapoints..\n",
-      "max_lag = min([100 * int(tauD), (len(summed_data) -1) * STEP])\n",
+      "max_lag = min([100 * int(tauD), (len(t) -1) * STEP])\n",
       "\n",
+      "tauD = w_xy**2 / (4*D) * 2.5\n",
       "\n",
       "# Individual data\n",
       "plt.subplot(221)\n",
@@ -613,6 +614,11 @@
       "\n",
       "plt.xlabel(\"Time lag (ns)\")\n",
       "plt.title(\"Normalized Autocorrelation\")\n",
+      "\n",
+      "# Plot model curve\n",
+      "_x = np.linspace(0,len(t), 5000)\n",
+      "_G =(1 + _x / tauD)**(-1)\n",
+      "plt.plot(_x, _G, linestyle='--', linewidth=4)\n",
       "    \n",
       "# Plot tau_D, diffusion time\n",
       "plt.axvline(tauD)\n",
@@ -625,6 +631,12 @@
       "plt.xscale('log')\n",
       "\n",
       "plt.acorr(binned_tots, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
+      "\n",
+      "\n",
+      "# Plot model curve\n",
+      "_x = np.linspace(0,len(t), 5000)\n",
+      "_G = (1 + _x / tauD)**(-1)\n",
+      "plt.plot(_x, _G, linestyle='--', linewidth=4)\n",
       "\n",
       "plt.xlabel(\"Time lag (ns)\")\n",
       "plt.title(\"Normalized Autocorrelation\")\n",
@@ -654,7 +666,12 @@
       "plt.xscale('log')\n",
       "autocorrelated = np.correlate(binned_tots, binned_tots, mode='full')\n",
       "autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
-      "plt.plot(autocorrelated, linestyle='-')"
+      "plt.plot(autocorrelated, linestyle='-')\n",
+      "\n",
+      "_x = np.linspace(0,len(t)*2, 5000)\n",
+      "_G = 1/.000000445 * (1 + _x / tauD)**(-1)\n",
+      "plt.plot(_x, _G, linestyle='-')\n",
+      "plt.xlim([10,len(t)])"
      ],
      "language": "python",
      "metadata": {},
@@ -663,7 +680,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "len(t)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
