Added cells for calculating diffusion constant from data

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -21,7 +21,7 @@
    "version": "3.6.1"
   },
   "name": "",
-  "signature": "sha256:bff76964eeb70a5ec9c34928bf118be15ff7d5fe82ece4b4d59048b096e6e558"
+  "signature": "sha256:09c2b5ad3daf65b39d2e43bc585918426cabcfb705b0fe1525158ded27852a0a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -74,6 +74,8 @@
       "     \n",
       "#### \u2610 Come up with a meaningful way of plotting uncertainties.\n",
       " - The way I have it defined now, $\\delta I(t) = I(t) - \\langle I(t) \\rangle$ isn't a particularly meaningful quantity. Since $\\langle I(t) \\rangle = \\frac{I(t)}{\\text{BIN_SIZE}}$ at a time step $t$, all these quantities are just scalar multiples of each other.\n",
+      " \n",
+      "#### \u2610 How do PBC vs unwrapped affect prediction of diffusion constant?\n",
       "     \n",
       "[Checkbox symbols]:<> (\u2612 \u2610)"
      ]
@@ -119,6 +121,7 @@
      "input": [
       "import mdtraj as md\n",
       "import numpy as np\n",
+      "from scipy.optimize import curve_fit\n",
       "import matplotlib.pyplot as plt\n",
       "\n",
       "import multiprocessing\n",
@@ -600,6 +603,19 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def autocorr_model(t, D):\n",
+      "    tauD = w_xy**2 / (4*D) * 2.5\n",
+      "    \n",
+      "    return (1 + t / tauD)**(-1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# Don't set the max lag to greater than the number of datapoints..\n",
       "max_lag = min([100 * int(tauD), (len(t) -1) * STEP])\n",
       "\n",
@@ -664,13 +680,82 @@
       "# Manually autocorrelate the data, without relying on plt.acorr -- produces the exact same curve as plt.acorr with normed=False\n",
       "plt.subplot(221)\n",
       "plt.xscale('log')\n",
-      "autocorrelated = np.correlate(binned_tots, binned_tots, mode='full')\n",
+      "#normalized = [x/np.linalg.norm(x) for x in binned_tots]\n",
+      "normalized = binned_tots/np.linalg.norm(binned_tots)\n",
+      "autocorrelated = np.correlate(normalized, normalized, mode='full')\n",
       "autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
       "plt.plot(autocorrelated, linestyle='-')\n",
       "\n",
       "_x = np.linspace(0,len(t)*2, 5000)\n",
-      "_G = 1/.000000445 * (1 + _x / tauD)**(-1)\n",
-      "plt.plot(_x, _G, linestyle='-')\n",
+      "_G = 1/1 * (1 + _x / tauD)**(-1)\n",
+      "plt.plot(_x, _G, linestyle='--')\n",
+      "plt.xlim([10,len(t)])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Attempt to determine diffusion coefficient from FCS data\n",
+      "Using the equation for diffusion in a membrane presented by Schwille, attempt to fit the FCS data to a function of the form\n",
+      "\n",
+      "$G(t) = \\frac{1}{N} \\left(1 + \\frac{t}{\\tau_D} \\right)^{-1}$.\n",
+      "\n",
+      "Since the autocorrelation curves are normalized, $N$ can be set to 1."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### For summed data"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.subplot(221)\n",
+      "plt.xscale('log')\n",
+      "optimals = []\n",
+      "covariances = []\n",
+      "for _data in binned_avgs:\n",
+      "    \n",
+      "    normalized = _data/np.linalg.norm(_data)\n",
+      "    autocorrelated = np.correlate(normalized, normalized, mode='full')\n",
+      "    autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
+      "    _optimal, _covariance = curve_fit(autocorr_model, _x, autocorrelated, p0=D)\n",
+      "    optimals.append(_optimal)\n",
+      "    covariances.append(_covariance)\n",
+      "    \n",
+      "    plt.plot(_x, autocorrelated)\n",
+      "    plt.plot(_x, autocorr_model(_x, _optimal), linestyle='--')\n",
+      "    \n",
+      "print([x[0] for x in optimals])\n",
+      "print(\"Average D from data was %f +- %f\" % (np.mean(optimals), np.std(optimals)))\n",
+      "plt.xlim([10,len(t)])\n",
+      "\n",
+      "\n",
+      "plt.subplot(222)\n",
+      "\n",
+      "_x = np.linspace(0, len(t), 2001)\n",
+      "normalized = binned_tots/np.linalg.norm(binned_tots)\n",
+      "\n",
+      "optimal, covariance = curve_fit(autocorr_model, _x, autocorrelated, p0=D)\n",
+      "\n",
+      "print(\"D was set at %f\" % D)\n",
+      "print(\"D estimated at %f +- %f.\" % (optimal, np.sqrt(np.diag(covariance))))\n",
+      "\n",
+      "plt.xscale('log')\n",
+      "\n",
+      "plt.plot(_x, autocorr_model(_x, D), linestyle='--')\n",
+      "plt.acorr(binned_tots, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
+      "\n",
+      "plt.plot(_x, autocorr_model(_x, optimal), linestyle='--', color='black')\n",
+      "\n",
       "plt.xlim([10,len(t)])"
      ],
      "language": "python",
@@ -680,9 +765,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "len(t)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
