Added code to calculate diffusion coefficients from 0.5 crossing of autocorrelation curve

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -21,7 +21,7 @@
    "version": "3.6.1"
   },
   "name": "",
-  "signature": "sha256:09c2b5ad3daf65b39d2e43bc585918426cabcfb705b0fe1525158ded27852a0a"
+  "signature": "sha256:857beaba82492515bd18217e5a2f9fd365c1b858829ba8593a0303c3dc73389f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -71,11 +71,9 @@
       " \n",
       "#### \u2612 Handle breaking data up into bins better -- currently ignores the remainder of lipids that don't fall into a bin. (I.e. 11 lipids, bin size 3, the remaining 2 that don't evenly fall into bins are discarded.)\n",
       " - Done. The leftover lipids are put into their own bin, which may be smaller than the BIN_SIZE.\n",
-      "     \n",
-      "#### \u2610 Come up with a meaningful way of plotting uncertainties.\n",
-      " - The way I have it defined now, $\\delta I(t) = I(t) - \\langle I(t) \\rangle$ isn't a particularly meaningful quantity. Since $\\langle I(t) \\rangle = \\frac{I(t)}{\\text{BIN_SIZE}}$ at a time step $t$, all these quantities are just scalar multiples of each other.\n",
       " \n",
-      "#### \u2610 How do PBC vs unwrapped affect prediction of diffusion constant?\n",
+      "#### \u2612 How do PBC vs unwrapped affect prediction of diffusion constant?\n",
+      " - Done. Don't appear to significant affect results.\n",
       "     \n",
       "[Checkbox symbols]:<> (\u2612 \u2610)"
      ]
@@ -107,7 +105,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "trajectory_file = \"40nm/run.xtc\"\n",
+      "trajectory_file = \"40nm/run_nojump.xtc\"\n",
       "trr_file = \"40nm/run.trr\"\n",
       "topology_file = \"40nm/system.gro\""
      ],
@@ -121,7 +119,8 @@
      "input": [
       "import mdtraj as md\n",
       "import numpy as np\n",
-      "from scipy.optimize import curve_fit\n",
+      "from scipy.optimize import curve_fit, fsolve\n",
+      "from scipy.interpolate import interp1d\n",
       "import matplotlib.pyplot as plt\n",
       "\n",
       "import multiprocessing\n",
@@ -211,7 +210,7 @@
       "INTENSITY = 1\n",
       "\n",
       "# Percentage of tagged particles\n",
-      "SAMPLING_RATIO = .1\n",
+      "SAMPLING_RATIO = .8\n",
       "\n",
       "# How many sigmas out from the beam center to truncate the beam's Gaussian profile at\n",
       "CUTOFF = 3\n",
@@ -229,7 +228,7 @@
      "source": [
       "#### Diffusion parameters\n",
       "\n",
-      "`D` is the diffusion constant for POPC, ~~using data from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1303347/~~ using values from Andrew's STRD paper, in units of nm^2/ns.\n",
+      "`D` is the diffusion constant for POPC, ~~using data from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1303347/~~ using values from Andrew's STRD paper$^{[2]}$, in units of nm^2/ns.\n",
       "\n",
       "`tauD` is the expected diffusion time, or the time of the half-max for the autocorrelation curve."
      ]
@@ -316,9 +315,17 @@
      "metadata": {},
      "source": [
       "### `generate_detection`\n",
-      "Defines what happens when a detection is generated from a lipid. Right now, `INTENSITY` is weighted by a 2-D Gaussian determined by the cell's position.\n",
+      "Defines what happens when a detection is generated from a lipid. Right now, `INTENSITY` is weighted by a 2-D Gaussian determined by the cell's position:\n",
       "\n",
-      "$I = I_0 \\exp{ \\left( - \\frac{(x-x_0)^2 + (y-y_0)^2 }{2 \\sigma^2} \\right) }$"
+      "$I = I_0 \\exp{ \\left( - \\frac{(x-x_0)^2 + (y-y_0)^2 }{2 \\sigma^2} \\right) }$\n",
+      "\n",
+      "#### Inputs\n",
+      "- `t`: mdtraj.Trajectory object\n",
+      "- `frame_index`: index of frame to analyze in trajectory  \n",
+      "- `atom`: mdtraj.Atom object to be used for detection\n",
+      "\n",
+      "#### Returns\n",
+      "- Intensity contribution from `atom`"
      ]
     },
     {
@@ -357,7 +364,12 @@
      "source": [
       "### `analyze_frame`\n",
       "\n",
-      "Analyzes the positions of atoms in a given frame, and updates the detections list with each atom's position."
+      "Analyzes the positions of atoms in a given frame, and updates the `detections` list with each atom's position.\n",
+      "\n",
+      "#### Inputs\n",
+      "- `t`: mdtraj.Trajectory object\n",
+      "- `frame_index`: index of frame to analyze in trajectory  \n",
+      "- `detections`: shared list of all detections"
      ]
     },
     {
@@ -385,11 +397,64 @@
      "outputs": []
     },
     {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Load trajectory data"
+      "### `autocorr_model`\n",
+      "\n",
+      "Models the expected autocorrelation curve at a given time, for a given diffusion constant.\n",
+      "\n",
+      "#### Inputs\n",
+      "- `t`: Time to calculate autocorrelation at\n",
+      "- `D`: Diffusion constant\n",
+      "\n",
+      "#### Returns\n",
+      "- Value of autocorrelation curve at time `t`"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def autocorr_model(t, D):\n",
+      "    tauD = w_xy**2 / (4*D) * 2.5\n",
+      "    \n",
+      "    return (1 + t / tauD)**(-1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### `autocorrelate`\n",
+      "Computes the autocorrelation curve for a set of data."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def autocorrelate(_data, normed=True):\n",
+      "    if normed:\n",
+      "        normalized = _data/np.linalg.norm(_data)\n",
+      "        \n",
+      "    autocorrelated = np.correlate(normalized, normalized, mode='full')\n",
+      "    autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
+      "    \n",
+      "    return autocorrelated"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Load trajectory data"
      ]
     },
     {
@@ -507,7 +572,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Bin lipids in data"
+      "### Bin lipids in data\n",
+      "\n",
+      "`binned_tots[bin][timestep]` is the total intensity for a certain bin at a certain timestep\n",
+      "\n",
+      "`binned_avgs[bin]` is the average intensity for a bin, over the whole time\n",
+      "\n",
+      "`binned_dI[bin][timestep]` is the difference of the total intensity from the average at a given timestep\n",
+      "\n",
+      "`binned_tot[timestep]` is the total intensity from all bins at a certain timestep"
      ]
     },
     {
@@ -533,17 +606,17 @@
       "    _detections = [x for x in detections[g*BIN_SIZE:BIN_SIZE*(g+1)]]\n",
       "        \n",
       "    \n",
-      "    avg_I = np.mean(_detections, axis=0)\n",
+      "    avg_I = np.mean(_detections)\n",
       "    tot_I = np.sum(_detections, axis=0)\n",
       "    \n",
-      "    delta_I = [tot_I[x] - avg_I[x] for x in range(len(tot_I))]\n",
+      "    delta_I = [tot_I[x] - avg_I for x in range(len(tot_I))]\n",
       "    \n",
       "    \n",
       "    binned_tots.append(tot_I)\n",
       "    binned_avgs.append(avg_I)\n",
       "    binned_dI.append(delta_I)\n",
       "    \n",
-      "binned_tots = np.sum(binned_tots, axis=0)"
+      "binned_tot = np.sum(binned_tots, axis=0) - np.mean(binned_tots)"
      ],
      "language": "python",
      "metadata": {},
@@ -571,7 +644,7 @@
       "################## Plot intensity traces #############################\n",
       "# Plot the intensities of detections associated with each lipid\n",
       "plt.subplot(221)\n",
-      "for _data in binned_avgs:\n",
+      "for _data in binned_dI:\n",
       "    plt.plot(np.arange(0, len(t), 1), _data, marker='o', markersize=.5 ) \n",
       "plt.xlabel(\"Time (ns)\")\n",
       "plt.ylabel(\"Intensity\")\n",
@@ -579,7 +652,7 @@
       "\n",
       "# Plot sum of intensities (i.e. what a detector would see)\n",
       "plt.subplot(222)\n",
-      "plt.plot(np.arange(0, len(t), 1), binned_tots, marker='None', markersize=.5 ) \n",
+      "plt.plot(np.arange(0, len(t), 1), binned_tot, marker='None', markersize=.5 ) \n",
       "# summed_data = np.sum(intensities, axis=0)\n",
       "# #plt.plot(np.arange(0,len(summed_data), 1), summed_data, marker = 'o', markersize=.1, )\n",
       "# plt.plot(np.arange(0,len(binned), 1), [x[1] for x in binned], marker = 'o', markersize=.1, )\n",
@@ -603,29 +676,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def autocorr_model(t, D):\n",
-      "    tauD = w_xy**2 / (4*D) * 2.5\n",
-      "    \n",
-      "    return (1 + t / tauD)**(-1)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "# Don't set the max lag to greater than the number of datapoints..\n",
       "max_lag = min([100 * int(tauD), (len(t) -1) * STEP])\n",
       "\n",
-      "tauD = w_xy**2 / (4*D) * 2.5\n",
+      "tauD = w_xy**2 / (4*D)\n",
       "\n",
       "# Individual data\n",
       "plt.subplot(221)\n",
       "plt.xscale('log')\n",
       "\n",
-      "for _data in binned_avgs:\n",
+      "for _data in binned_dI:\n",
       "    plt.acorr(_data, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
       "\n",
       "plt.xlabel(\"Time lag (ns)\")\n",
@@ -646,7 +706,7 @@
       "plt.subplot(222)\n",
       "plt.xscale('log')\n",
       "\n",
-      "plt.acorr(binned_tots, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
+      "plt.acorr(binned_tot, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
       "\n",
       "\n",
       "# Plot model curve\n",
@@ -670,25 +730,57 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Manually generate autocorrelation data"
+      "## Determine diffusion coefficient from FCS data\n",
+      "\n",
+      "The following cells determine the diffusion coefficient from the FCS data using two different techniques. The binned and summed data are treated separately. First, a curve is fit to the autocorrelation curve using the diffusion constant as the parameter."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Curve Fit Method\n",
+      "\n",
+      "Using the equation for diffusion in a membrane presented by Schwille$^{[1]}$, attempt to fit the FCS data to a function of the form\n",
+      "\n",
+      "$G(t) = \\frac{1}{N} \\left(1 + \\frac{t}{\\tau_D} \\right)^{-1}$, where\n",
+      "\n",
+      "$\\tau_D = \\frac{w_{xy}^2}{4 D}$\n",
+      "\n",
+      "Since the autocorrelation curves are normalized, $N$ is set to 1.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Binned data"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Manually autocorrelate the data, without relying on plt.acorr -- produces the exact same curve as plt.acorr with normed=False\n",
+      "_x = np.linspace(0, len(t), 2001)\n",
+      "\n",
       "plt.subplot(221)\n",
       "plt.xscale('log')\n",
-      "#normalized = [x/np.linalg.norm(x) for x in binned_tots]\n",
-      "normalized = binned_tots/np.linalg.norm(binned_tots)\n",
-      "autocorrelated = np.correlate(normalized, normalized, mode='full')\n",
-      "autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
-      "plt.plot(autocorrelated, linestyle='-')\n",
-      "\n",
-      "_x = np.linspace(0,len(t)*2, 5000)\n",
-      "_G = 1/1 * (1 + _x / tauD)**(-1)\n",
-      "plt.plot(_x, _G, linestyle='--')\n",
+      "optimals = []\n",
+      "covariances = []\n",
+      "for _data in binned_dI:\n",
+      "    \n",
+      "    autocorrelated = autocorrelate(_data)\n",
+      "    \n",
+      "    _optimal, _covariance = curve_fit(autocorr_model, _x, autocorrelated, p0=D)\n",
+      "    optimals.append(_optimal)\n",
+      "    covariances.append(_covariance)\n",
+      "    \n",
+      "    plt.plot(_x, autocorrelated)\n",
+      "    plt.plot(_x, autocorr_model(_x, _optimal), linestyle='--')\n",
+      "    \n",
+      "var = [np.sqrt(np.diag(x)) for x in covariances]\n",
+      "    \n",
+      "print(\"Average D from data was %f +- %f\" % (np.mean(optimals), np.mean(var)))\n",
       "plt.xlim([10,len(t)])"
      ],
      "language": "python",
@@ -699,50 +791,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Attempt to determine diffusion coefficient from FCS data\n",
-      "Using the equation for diffusion in a membrane presented by Schwille, attempt to fit the FCS data to a function of the form\n",
-      "\n",
-      "$G(t) = \\frac{1}{N} \\left(1 + \\frac{t}{\\tau_D} \\right)^{-1}$.\n",
-      "\n",
-      "Since the autocorrelation curves are normalized, $N$ can be set to 1."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### For summed data"
+      "#### Summed data"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "plt.subplot(221)\n",
-      "plt.xscale('log')\n",
-      "optimals = []\n",
-      "covariances = []\n",
-      "for _data in binned_avgs:\n",
-      "    \n",
-      "    normalized = _data/np.linalg.norm(_data)\n",
-      "    autocorrelated = np.correlate(normalized, normalized, mode='full')\n",
-      "    autocorrelated = autocorrelated[(autocorrelated.size-1)//2 :]\n",
-      "    _optimal, _covariance = curve_fit(autocorr_model, _x, autocorrelated, p0=D)\n",
-      "    optimals.append(_optimal)\n",
-      "    covariances.append(_covariance)\n",
-      "    \n",
-      "    plt.plot(_x, autocorrelated)\n",
-      "    plt.plot(_x, autocorr_model(_x, _optimal), linestyle='--')\n",
-      "    \n",
-      "print([x[0] for x in optimals])\n",
-      "print(\"Average D from data was %f +- %f\" % (np.mean(optimals), np.std(optimals)))\n",
-      "plt.xlim([10,len(t)])\n",
-      "\n",
-      "\n",
       "plt.subplot(222)\n",
       "\n",
-      "_x = np.linspace(0, len(t), 2001)\n",
-      "normalized = binned_tots/np.linalg.norm(binned_tots)\n",
+      "autocorrelated = autocorrelate(binned_tot)\n",
+      "\n",
+      "normalized = binned_tot/np.linalg.norm(binned_tot)\n",
       "\n",
       "optimal, covariance = curve_fit(autocorr_model, _x, autocorrelated, p0=D)\n",
       "\n",
@@ -752,9 +812,15 @@
       "plt.xscale('log')\n",
       "\n",
       "plt.plot(_x, autocorr_model(_x, D), linestyle='--')\n",
-      "plt.acorr(binned_tots, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
+      "plt.acorr(binned_tot, maxlags=max_lag, usevlines=False, linestyle='-', marker=\"None\", normed=True)\n",
       "\n",
       "plt.plot(_x, autocorr_model(_x, optimal), linestyle='--', color='black')\n",
+      "var = np.sqrt(np.diag(covariance))\n",
+      "\n",
+      "_y1 = autocorr_model(_x, optimal+var)\n",
+      "_y2 = autocorr_model(_x, optimal-var)\n",
+      "\n",
+      "plt.fill_between(_x, _y1, _y2)\n",
       "\n",
       "plt.xlim([10,len(t)])"
      ],
@@ -763,12 +829,94 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### .5 crossing method\n",
+      "This method determines $\\tau_D$ first by looking for where the normalized autocorrelation crosses 0.5, then computes the diffusion coefficient from that using the same formula as above."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Binned data"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "_x = np.arange(0, len(t), 1)\n",
+      "\n",
+      "crossings = []\n",
+      "\n",
+      "guess = 500 # 500 is a magic number, the initial guess for the interpolation. Not great, but it works. Doesn't affect the output.\n",
+      "\n",
+      "for _data in binned_dI:\n",
+      "    \n",
+      "    autocorrelated = autocorrelate(_data)\n",
+      "    \n",
+      "    interpolated = interp1d(_x, autocorrelated - .5)\n",
+      "    crossings.append(fsolve(interpolated, guess)) \n",
+      "\n",
+      "calced_D = [w_xy**2 / (4 * x) for x in crossings]\n",
+      "    \n",
+      "\n",
+      "# print(_D)\n",
+      "\n",
+      "print(\"Average diffusion constant is %f +- %f\" % (np.mean(calced_D), np.std(calced_D)))"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Summed data"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "_x = np.arange(0, len(t), 1)\n",
+      "    \n",
+      "autocorrelated = autocorrelate(binned_tot)\n",
+      "\n",
+      "interpolated = interp1d(_x, autocorrelated - .5)\n",
+      "crossings = fsolve(interpolated, tauD)\n",
+      "\n",
+      "calced_D = [w_xy**2 / (4 * x) for x in crossings]\n",
+      "\n",
+      "print(\"Diffusion constant is %f\" % (np.mean(calced_D)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Bibliography"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[1] Chiantia, Salvatore, Jonas Ries, and Petra Schwille. \"Fluorescence correlation spectroscopy in membrane structure elucidation.\" Biochimica et Biophysica Acta (BBA)-Biomembranes 1788.1 (2009): 225-233.\n",
+      "\n",
+      "[2] Zgorski, Andrew, and Edward Lyman. \"Toward Hydrodynamics with Solvent Free Lipid Models: STRD Martini.\" Biophysical journal 111.12 (2016): 2689-2697."
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": []
     }
    ],
    "metadata": {}
